﻿Release Notes
--------------------------------------------------------
- Adicionando NUnit3TestAdapter
- Construtor e validadores da classe Card
--------------------------------------------------------
Data: 07/02/2016
- Trocando chave primária da tabela Student de CPF para id
- Removendo classe ValidadorCPF
- Adicionando campos email, emailResponsável e senha à tabela Student
- Nova classe Encryptor
--------------------------------------------------------
Data: 31/01/2016
- Adicionando ícone
- Cadastro de aluno não faz mais necessário o cadastro do cartão
- Cadastro de aluno agora faz edição e busca também
--------------------------------------------------------
Data: 31/01/2016
- Salvando estudante no db
--------------------------------------------------------
Data: 31/01/2016
- Adicionando referências e modelagem sql server
--------------------------------------------------------
Data: 23/01/2016
- RegisterStudentForm: Troca de monthCalendar por dateTimePicker
- RegisterStudentForm: Adicionando campo sobrenome
- RegisterStudentForm: Adicionando botões "Ok" e "Cancela"
- RegisterStudentForm: Validação nos campos nome, sobrenome e CPF
- Adicionando classe Student e ValidadorCPF
--------------------------------------------------------
Data: 
- Versão inicial