@@ -1,0 +1,80 @@
+﻿using NHibernate;
+using NUnit.Framework;
+using PaymentProcessor.Entities;
+using PaymentProcessor.Infra;
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace PaymentProcessor.Tests
+{
+    [TestFixture]
+    public class CardTest
+    {
+        private ISession session;
+
+        [OneTimeSetUp]
+        public void PreparingTests()
+        {
+            NHibernateHelper.GenerateSchema();
+            session = NHibernateHelper.OpenSession();
+        }
+
+        [Test]
+        public void CantAcceptEmptyTrackData()
+        {
+            string trackData = "";
+            int cvv2 = 123;
+
+            Assert.Throws<Exception>(() => new Card(trackData, cvv2));
+        }
+
+        [Test]
+        public void CantAcceptDifferentPANsInTracks()
+        {
+            string trackData = "%b44444444444444444^you/a gift for^23101211000000220000000?\n;55555555555555555=231012110000220?\n;04144?";
+
+            Assert.Throws<Exception>(() => new Card(trackData, 0));
+        }
+
+        [Test]
+        public void CantAcceptDifferentDatesInTracks()
+        {
+            string trackData = "%b44444444444444444^you/a gift for^23101211000000220000000?\n;b44444444444444444=231012110000220?\n;04144?";
+
+            Assert.Throws<Exception>(() => new Card(trackData, 0));
+        }
+
+        [Test]
+        public void MustAcceptValidDate()   //this was due a bad implementation of CheckAndFillTracks, as it was putting the card's expiration date day as 31, and not all months have 31 days
+        {
+            string trackData = "%b44444444444444444^you/a gift for^23091211000000220000000?\n;44444444444444444=230912110000220?\n;04144?";
+
+            Assert.DoesNotThrow(() => new Card(trackData, 0));
+        }
+
+        [Test]
+        public void MustAcceptOnlyTrack1()
+        {
+            string trackData = "%b44444444444444444^you/a gift for^23101211000000220000000?";
+
+            Assert.DoesNotThrow(() => new Card(trackData, 0));
+        }
+
+        [Test]
+        public void MustAcceptOnlyTrack2()
+        {
+            string trackData = ";b44444444444444444=231012110000220?";
+
+            Assert.DoesNotThrow(() => new Card(trackData, 0));
+        }
+
+        [OneTimeTearDown]
+        public void FinalizeTests()
+        {
+            session.Close();
+        }
+    }
+}
