@@ -2,6 +2,7 @@
 --------------------------------------------------------
 - Adicionando NUnit3TestAdapter
 - Construtor e validadores da classe Card
+- Criando primeira versão da classe CardTest
 --------------------------------------------------------
 Data: 07/02/2016
 - Trocando chave primária da tabela Student de CPF para id
